Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-15835
Crash on "Open Memory Editor"
Log In
Export
XML
Word
Printable
Details
Type:
Bug
Status:
Closed
Priority:
P1: Critical
Resolution:
Done
Affects Version/s:
Qt Creator 4.0.0-beta1
Fix Version/s:
Qt Creator 4.0.0-beta1
Component/s:
Debugger
Labels:
None
Description
Open Memory Editor crashes
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Orgad Shaneh
Reporter:
Orgad Shaneh
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
08 Mar '16 11:04
Updated:
08 Mar '16 15:22
Resolved:
08 Mar '16 15:22
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
BinEditor: Fix crash on editor initialization
Gerrit Review: