BinEditor: Fix crash on editor initialization

MemoryAgent::doCreateBinEditor calls openEditorWithContents, with empty
contents.

The BinEditor fails to handle this case, and crashes when it divides by
zero.

Task-number: QTCREATORBUG-15835
Change-Id: I8009ef991a445ef4cc192d1bda6a208d51e2b48b
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>